fix(core): Executions css causing overflow (#8409)

--- a/app/scripts/modules/core/src/pipeline/config/graph/pipelineGraph.less
+++ b/app/scripts/modules/core/src/pipeline/config/graph/pipelineGraph.less
@@ -175,5 +175,4 @@ svg.pipeline-graph {
   background-color: var(--color-cirrus);
   border: 1px solid var(--color-alto);
   border-top: none;
-  max-width: 72vw;
 }
